# TNNGBOT

./: .gitignore  gandalfQuotes.json  keep_alive.py  laszloQuotes.json  main.py  mongoDBAPI.py  pokemonPool.json  pyproject.toml
cogs/: pokemon.py  quotes.py
db/: manager.py  messages.py  pokemon.py
schemas/: pokemon.py
tnngbot/: keep_alive.py  main.py
tnngbot/classes/: evolve_view.py
tnngbot/cogs/: fuse_pokemon.py  poke_battle.py  pokemon.py  quotes.py
tnngbot/cogs/commands/: fuse_pokemon.py  pokedex.py  sacrafice_pokemon.py  sacrifice_pokemon.py  trade_pokemon.py  whohas_pokemon.py
tnngbot/cogs/reactions/: throw_pokeball.py
tnngbot/db/: __init__.py  base.py  game_state.py  manager.py  messages.py  poke_battle.py  pokemon.py  users.py
tnngbot/schemas/: game_state.py  pokemon.py  users.py
tnngbot/static/: gandalfQuotes.json  machoManQuotes.json  pokemonPool.json  pokemon_type.json  pokemon_type_tiers.json  type_emoji.json
tnngbot/utils/: evolve.py  exponential_probability.py  pokemon_pool.py  quotes.py  type.py
