[tool.poetry]
name = "repl_python3_TNNGBOT"
version = "0.1.0"
description = "Bot for TNNG"
authors = ["Jacob Pettis <Jacobpno1@gmamil.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
discord = "^2.0.0"
Flask = "^2.0.2"
discord-interactions = "^0.3.0"
python-dotenv = "^0.20.0"
yarl = "^1.9.2"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
debugpy="^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
